migration to Mojang Mapping + update to 26.1.x